fixed app title position on non mobile and icon

--- a/modernStyle.css
+++ b/modernStyle.css
@@ -76,7 +76,7 @@
   .hide-on-mobile {
     display: none !important;
   }
-  .app-icon {
+  /* .app-icon {
 text-align: center;    
  min-width:0;
 overflow:hidden;
@@ -93,16 +93,9 @@ overflow:hidden;
     font-size: 10px;
       display: block;
   padding-top: 4px;
-  }
+  } */
 
-  /* .app-icon a {
-  transition: all 0.4s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
-
+   
 
   .input-div-start input {
     font-size: 15px;
@@ -151,7 +144,24 @@ height:333px;
     box-sizing: border-box;
    }
 }
-
+  .app-icon {
+text-align: center;    
+ min-width:0;
+overflow:hidden;
+  }
+  .app-icon img {
+  width: 40px;
+  height: 40px;
+  object-fit: contain;
+  justify-content: center !important;
+  align-items: center !important;
+  margin: 0 auto;
+  }
+  .app-icon span {
+    font-size: 10px;
+      display: block;
+  padding-top: 4px;
+  }
 * {
   --nav-height: 3rem;
   --max-height: 100vh;
